--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.2",
+    "express": "^5.2.1",
+    "generate": "^0.14.0",
+    "jsonwebtoken": "^9.0.3",
+    "mysql2": "^3.18.0",
     "next": "16.1.6",
+    "prisma": "^6.19.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
